[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pause/Itens.gd" type="Script" id=1]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/Font24.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Panels/Hover_Menu_Info_Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Panels/Disabled_Menu_Info_Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://Pause/ItemSlot0.gd" type="Script" id=6]


[node name="Itens" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.86, 1.4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1030.0
margin_bottom = 770.0
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 744.0
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="Options" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 300.0
margin_bottom = 744.0
rect_min_size = Vector2( 300, 50 )

[node name="CurrentMenu" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Itens"
flat = true

[node name="Use" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Use"

[node name="Organize" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Organize"

[node name="KeyItens" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 222.0
margin_right = 300.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Key Itens"

[node name="Back" type="Button" parent="Panel/HBoxContainer/Options" groups=[
"text",
]]
margin_top = 296.0
margin_right = 300.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Info" type="VBoxContainer" parent="Panel/HBoxContainer/Options"]
margin_top = 370.0
margin_right = 300.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 220 )

[node name="Description" type="Label" parent="Panel/HBoxContainer/Options/Info" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = "  Description"

[node name="Itens" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 304.0
margin_right = 1024.0
margin_bottom = 744.0
rect_min_size = Vector2( 720, 0 )

[node name="ItemSlot0" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot1" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot2" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot3" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot4" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot5" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot6" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot7" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot8" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot9" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot10" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )

[node name="ItemSlot11" type="Button" parent="Panel/HBoxContainer/Itens" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 6 )
[connection signal="pressed" from="Panel/HBoxContainer/Options/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Options/Back" to="." method="_on_Back_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot0" to="Panel/HBoxContainer/Itens/ItemSlot0" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot0" to="Panel/HBoxContainer/Itens/ItemSlot0" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot1" to="Panel/HBoxContainer/Itens/ItemSlot1" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot1" to="Panel/HBoxContainer/Itens/ItemSlot1" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot2" to="Panel/HBoxContainer/Itens/ItemSlot2" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot2" to="Panel/HBoxContainer/Itens/ItemSlot2" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot3" to="Panel/HBoxContainer/Itens/ItemSlot3" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot3" to="Panel/HBoxContainer/Itens/ItemSlot3" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot4" to="Panel/HBoxContainer/Itens/ItemSlot4" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot4" to="Panel/HBoxContainer/Itens/ItemSlot4" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot5" to="Panel/HBoxContainer/Itens/ItemSlot5" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot5" to="Panel/HBoxContainer/Itens/ItemSlot5" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot6" to="Panel/HBoxContainer/Itens/ItemSlot6" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot6" to="Panel/HBoxContainer/Itens/ItemSlot6" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot7" to="Panel/HBoxContainer/Itens/ItemSlot7" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot7" to="Panel/HBoxContainer/Itens/ItemSlot7" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot8" to="Panel/HBoxContainer/Itens/ItemSlot8" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot8" to="Panel/HBoxContainer/Itens/ItemSlot8" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot9" to="Panel/HBoxContainer/Itens/ItemSlot9" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot9" to="Panel/HBoxContainer/Itens/ItemSlot9" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot10" to="Panel/HBoxContainer/Itens/ItemSlot10" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot10" to="Panel/HBoxContainer/Itens/ItemSlot10" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Itens/ItemSlot11" to="Panel/HBoxContainer/Itens/ItemSlot11" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Itens/ItemSlot11" to="Panel/HBoxContainer/Itens/ItemSlot11" method="_on_ItemSlot0_pressed"]
